# oa-classifier

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.py  setup.sh
.github/workflows/: tests.yaml
cfg/: config.yaml  files.yaml
data/: input_data.csv
oa_classifier/: main.py
src/pipelines/: pipeline.py  prepare_data.py  train_model.py
src/utils/: schemas.py  utils.py
tests/: test_prepare_data_pipeline.py  test_train_model_pipeline.py
